// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /v1/campaigns/:id/votes When vote with already voted HKID 409 - ALREADY_VOTED 1`] = `
Object {
  "data": Object {},
  "meta": Object {
    "code": 40902,
    "errors": Array [],
    "message": "This HKID has already voted this campaign.",
    "type": "ALREADY_VOTED",
  },
}
`;

exports[`POST /v1/campaigns/:id/votes When vote with invalid HKID 422 - INVALID_HKID 1`] = `
Object {
  "data": Object {},
  "meta": Object {
    "code": 42203,
    "errors": Array [],
    "message": "HKID is invalid.",
    "type": "HKID_INVALID",
  },
}
`;

exports[`POST /v1/campaigns/:id/votes When vote with invalid date 422 - INVALID_DATE 1`] = `
Object {
  "data": Object {},
  "meta": Object {
    "code": 42203,
    "errors": Array [],
    "message": "HKID is invalid.",
    "type": "HKID_INVALID",
  },
}
`;

exports[`POST /v1/campaigns/:id/votes When vote with non-exist campaign_id 404 - CAMPAIGN_NOT_FOUND 1`] = `
Object {
  "data": Object {},
  "meta": Object {
    "code": 40401,
    "errors": Array [],
    "message": "Campaign is not found.",
    "type": "NotFound",
  },
}
`;

exports[`POST /v1/campaigns/:id/votes When vote with non-exist candidate name 404 - CANDIDATE_NOT_FOUND 1`] = `
Object {
  "data": Object {},
  "meta": Object {
    "code": 40402,
    "errors": Array [],
    "message": "Candidate is not found.",
    "type": "NotFound",
  },
}
`;

exports[`POST /v1/campaigns/:id/votes When vote with valid input and valid date 201 - Successfully created 1`] = `
Object {
  "data": Object {
    "candidates": Array [
      Object {
        "name": "Michael Jordan",
        "number_of_votes": 1,
        "voted": false,
      },
      Object {
        "name": "Tim Duncan",
        "number_of_votes": 0,
        "voted": false,
      },
    ],
    "end_date": Array [
      "2019-01-31",
    ],
    "id": Array [
      "fa044192-db7e-4fd3-9334-c9344360286b",
    ],
    "start_date": Array [
      "2019-01-01",
    ],
    "title": Array [
      "Who is the best NBA player in the history",
    ],
  },
  "meta": Object {
    "code": 20100,
    "message": "Created",
  },
}
`;

exports[`POST /v1/campaigns/:id/votes When vote with valid input and valid date 201 - Successfully created: updated_campaign 1`] = `
Object {
  "end_date": "2019-01-31",
  "id": "fa044192-db7e-4fd3-9334-c9344360286b",
  "number_of_votes:Michael Jordan": "1",
  "number_of_votes:Tim Duncan": "0",
  "start_date": "2019-01-01",
  "title": "Who is the best NBA player in the history",
}
`;

exports[`POST /v1/campaigns/:id/votes When vote with valid input and valid date 201 - Successfully created: voted_campaign_hkid_set 1`] = `
Array [
  "ff4147ac6a03a3bcf124f9f49bc12e2bf3c0b2abe029a4dfaab7c39ae1f98309",
]
`;

exports[`POST /v1/campaigns/:id/votes When vote with valid input and valid date 201 - Successfully created: voted_candidate_hkid_set 1`] = `
Array [
  "ff4147ac6a03a3bcf124f9f49bc12e2bf3c0b2abe029a4dfaab7c39ae1f98309",
]
`;
